Feat: Added docker and K8